# rust_learn

./: Cargo.toml  IMPROVEMENTS.md  MODULE_DOCUMENTATION.md  PROJECT_STRUCTURE.md  README.md
.github/workflows/: ci.yml
benches/: README.md  mod.rs
docs/: README.md  advanced_patterns.md  basics.md  best_practices.md  concurrency.md  error_handling.md  macros.md  ownership.md  pitfalls.md  security.md  src_code_review_reassessment.md  testing.md  types.md
src/: advanced_patterns.rs  advanced_types.rs  basics.rs  best_practices.rs  concurrency.rs  database.rs  ecosystem.rs  error_handling.rs  lib.rs  macros.rs  main.rs  modules.rs  ownership.rs  pitfalls.rs  popular_libraries.rs  security.rs  testing.rs  types.rs
src/error_handling/: domain.rs  fundamentals.rs  infrastructure.rs  io_config.rs
src/projects/: mod.rs
src/projects/task_manager/: demo.rs  manager.rs  mod.rs  model.rs  stats.rs  storage.rs  tests.rs
src/testing/: documentation.rs  domain.rs  performance.rs  strategies.rs
tests/: comprehensive_tests.rs  integration_test.rs
