[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.51", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23.0"
