[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# 安全编程相关
rand = "0.9.2"
ring = "0.17.14"
sha2 = "0.10.9"
hmac = "0.12.1"
subtle = "2.6.1"

# 数据库相关
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "chrono", "uuid", "postgres", "sqlite"] }

# 加密和安全
base64 = "0.22.1"
hex = "0.4.3"
regex = "1.12.2"
pbkdf2 = "0.12.2"

[dev-dependencies]
tempfile = "3.23.0"
proptest = "1.9.0"
criterion = "0.7.0"
