[package]
name = "rust_learn"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# 安全编程相关
rand = "0.10.0"
ring = "0.17.14"
sha2 = "0.10.9"
hmac = "0.12.1"
subtle = "2.6.1"

# 数据库相关
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "chrono", "uuid", "postgres", "sqlite"] }

# 加密和安全
base64 = "0.22.1"
hex = "0.4.3"
regex = "1.12.3"
pbkdf2 = "0.12.2"

[dev-dependencies]
tempfile = "3.25.0"
proptest = "1.10.0"
criterion = "0.8.2"
